# trm-scheduling

./: .gitignore  .gitmodules  README.md  dataloaders.py  generate_data.py  generate_data_v1.py  generate_data_v2.py  generate_problems.py  main.py  pyproject.toml  requirements.txt  scratch.ipynb  solver.py  tensors_all.pkl  train.py  train_classification.py  train_jsp.ipynb  train_jsp.py  train_regression.py  tuples_all.pkl
configs/: bigger_model_10k.yaml  default.yaml
data/: generate_data.py
logs/: trm-jobshop-8152314.txt  trm-jobshop-8161914.txt  trm-jobshop-8161923.txt  trm-jobshop-8162308.txt  trm-jobshop-8162309.txt  trm-jobshop-8162518.txt
notebooks/: examine.ipynb  inference.ipynb
problems/: case_0_m3_j4_t3.csv  case_0_m3_j8_t7.csv  case_0_m4_j3_t8.csv  case_0_m9_j8_t8.csv  case_10_m4_j4_t3.csv  case_10_m4_j6_t3.csv  case_10_m6_j9_t7.csv  case_10_m8_j4_t8.csv  case_11_m4_j3_t4.csv  case_11_m5_j6_t4.csv  case_11_m6_j3_t9.csv  case_11_m6_j8_t6.csv  case_12_m5_j5_t6.csv  case_12_m5_j7_t9.csv  case_12_m6_j5_t7.csv  case_12_m8_j3_t8.csv  case_13_m3_j9_t4.csv  case_13_m4_j5_t9.csv  case_13_m4_j6_t4.csv  case_13_m4_j6_t8.csv  case_14_m4_j8_t3.csv  case_14_m6_j3_t7.csv  case_14_m6_j5_t4.csv  case_14_m9_j7_t4.csv  case_15_m3_j8_t4.csv  case_15_m5_j8_t7.csv  case_15_m6_j4_t3.csv  case_15_m9_j3_t3.csv  case_16_m3_j3_t3.csv  case_16_m3_j4_t5.csv  case_16_m3_j7_t6.csv  case_16_m9_j6_t9.csv  case_17_m3_j7_t3.csv  case_17_m4_j6_t8.csv  case_17_m4_j7_t4.csv  case_17_m9_j3_t3.csv  case_18_m6_j6_t6.csv  case_18_m7_j7_t6.csv  case_18_m8_j3_t7.csv  case_18_m8_j5_t4.csv  (+168 more)
(+41016 files in other folders)
